reflect-demo/tests/errors/invalid_reflect_attribute_path3.rs.skip
#[derive(serde::Deserialize, reflect::Input)]
struct MyStruct {
    #[reflect(output_type = "invalid")]
    field: u32,
}

fn main() {}
