reflect-demo/tests/errors/invalid_reflect_attribute_path3.stderr
error: unknown reflect type reference path attribute
 --> tests/errors/invalid_reflect_attribute_path3.rs:3:15
  |
3 |     #[reflect(output_type = "invalid")]
  |               ^^^^^^^^^^^
